# LLM_morality

./: .gitignore  ADVANCED_ANALYSIS_GUIDE.md  CLAUDE.md  FINAL_SUMMARY_ONE_PAGE copy.md  FINAL_SUMMARY_ONE_PAGE.md  IMPLEMENTATION_FIXES.md  MECH_INTERP_RESEARCH_LOG.md  PRESENTATION.md  WRITE_UP.md  advanced_analysis.py  analyze_results.ipynb  compare_policies.py  imgs.md  modal_train.py  paper_outline.md  plot_concrete_example.py  plotting_adapter.py  prompt_factory.py  pyproject.toml  quick_analysis.py  requirements.txt  run_inference.sh  visualize_results.py
analyzers/: __init__.py  common.py  generalization.py  prompts.py  reciprocity.py  regret.py
docs/reports/: ACTIVATION_STEERING_EXPERIMENTS.md  ANALYSIS_GUIDE.md  ATTENTION_AND_INTERACTION_ANALYSIS.md  CAUSAL_EXPERIMENT_SUMMARY.md  INFERENCE_GUIDE.md  LOGIT_DECISION_METRIC_LESSONS.md  LOGIT_LENS_INVESTIGATION.md  MASTER_RESEARCH_PLAN.md  NEXT_STEPS_STRATEGY.md  ORIGINAL_RESEARCH_PLAN.md  PATCHING_ANALYSIS_BRIEFING.md  QUICK_REFERENCE_EXPERIMENTS.md  (+13 more)
mech_interp/: README.md  __init__.py  activation_patching.py  activation_steering.py  attention_analysis.py  component_interactions.py  decision_metrics.py  direct_logit_attribution.py  linear_probes.py  logit_lens.py  lora_weight_transplant.py  model_loader.py  path_patching.py  prompt_generator.py  utils.py  weight_analysis.py
paper/: main.fls  main.tex  references.bib
scripts/: export_mermaid_pngs.sh
src/: fine_tune.py  inference_vsRandom.py
write_up/: EXTRACTED_DOCX_COMMENTS.md  LW_lit_review.md  WRITE_UP.md  WRITE_UP_LW.md  WRITE_UP_LW_google_docs.docx
(+228 files in other folders)
