[project]
name = "llm-morality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes==0.42.0",
    "dotenv>=0.9.9",
    "loralib==0.1.2",
    "outlines==0.0.46",
    "python-dotenv>=1.2.1",
    "transformers>=4.56.2",
    "trl>=0.27.1",
    "urllib3==1.26.6",
    "wandb==0.17.2",
]
